# MESA

./: .gitignore  Processor.py  README.md  feature_extraction.py  generate_data.py  main.m  main.py  notes  plot.py  pyproject.toml  requirements.txt  run.bat  simule_data.py  tests.py
MEDA/: main.m
data/: sensor_1.mat  sensor_2.mat  sensor_3.mat  sensor_4.mat  sensor_5.mat
deprecated/: Processor.py  generate_data.py  main.py
feature_extraction/: energy_check.py  features.py  functions.py
functions/: feature_extraction.py  simule_data.py  tests.py
internal/: Processor.py  __init__.py  features.py  generator.py  plot.py  tests.py
internal/feature_extraction/: features.py
internal/meda/: pca.py
internal/simulation/: __init__.py  generator.py
internal/visualization/: plot.py
reports/: 1_Function_showcase.ipynb  2_Energy_Conservation.ipynb  3_FFT_resolution.ipynb  4_Forced_FFT_resolution_PCA.ipynb
simulation/: generate_data.py  generator.py
simulation_data/: sensor_1.mat  sensor_2.mat  sensor_3.mat  sensor_4.mat  sensor_5.mat
src/msa/: Signal.py
src/msa.egg-info/: PKG-INFO  SOURCES.txt
src/msa/feature_extraction/: features.py
src/msa/simulation/: generate.py  generator.py
src/msa/visualization/: plot.py
tests/: test_features.py  test_plots.py
tests/data/: matrix.mat
visualization/: plot.py
